logs/bamboo.pantrybell.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/bamboo'...
Listing './lib/python3.5/site-packages/bamboo/pantrybell'...
Compiling './lib/python3.5/site-packages/bamboo/pantrybell/prototype.py'...
***   File "./lib/python3.5/site-packages/bamboo/pantrybell/prototype.py", line 39
    print "%s:%s" % (key, hostname)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bamboo/pantrybell/rackspace.py'...
***   File "./lib/python3.5/site-packages/bamboo/pantrybell/rackspace.py", line 59
    print svr['id'], svr['name']
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bamboo.pantrybell-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/rhaptos2'...
Listing './lib/python3.5/site-packages/rhaptos2/common'...
Compiling './lib/python3.5/site-packages/rhaptos2/common/conf.py'...
***   File "./lib/python3.5/site-packages/rhaptos2/common/conf.py", line 73
    except Rhaptos2Error, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rhaptos2/common/log.py'...
***   File "./lib/python3.5/site-packages/rhaptos2/common/log.py", line 85
    print "Firing %s" % s
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rhaptos2.common-0.0.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/statsd'...
Listing './lib/python3.5/site-packages/statsd/defaults'...
Listing './lib/python3.5/site-packages/statsd-3.2.2.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
